example/MyLanguageV1CodeParser.java
// Generated from MyLanguageV1Code.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MyLanguageV1CodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, ENDIF=3, PRINT=4, INT=5, SHIFTLEFT=6, DO=7, WHILE=8, RETURN=9, 
		PLUS=10, EQUAL=11, ASSIGN=12, NOTEQUAL=13, SEMICOLON=14, LPAREN=15, RPAREN=16, 
		LBRACE=17, RBRACE=18, INTEGER=19, NAME=20, NAME_TOKEN=21, WS=22;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_statement = 2, RULE_returnstmt = 3, 
		RULE_subprogram_dec = 4, RULE_subprogram_inv = 5, RULE_dowhilestmt = 6, 
		RULE_shiftstmt = 7, RULE_ifstmt = 8, RULE_printstmt = 9, RULE_assignstmt = 10, 
		RULE_expression = 11, RULE_term = 12, RULE_identifier = 13, RULE_integer = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "statement", "returnstmt", "subprogram_dec", 
			"subprogram_inv", "dowhilestmt", "shiftstmt", "ifstmt", "printstmt", 
			"assignstmt", "expression", "term", "identifier", "integer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'endif'", "'print'", "'int'", "'<<'", "'do'", 
			"'while'", "'return'", "'+'", "'=='", "'='", "'!='", "';'", "'('", "')'", 
			"'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "ENDIF", "PRINT", "INT", "SHIFTLEFT", "DO", "WHILE", 
			"RETURN", "PLUS", "EQUAL", "ASSIGN", "NOTEQUAL", "SEMICOLON", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "INTEGER", "NAME", "NAME_TOKEN", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyLanguageV1Code.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyLanguageV1CodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MyLanguageV1CodeParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<Subprogram_decContext> subprogram_dec() {
			return getRuleContexts(Subprogram_decContext.class);
		}
		public Subprogram_decContext subprogram_dec(int i) {
			return getRuleContext(Subprogram_decContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			System.out.println("%include \"asm_io.inc\"");
			                System.out.println("segment .bss"); 
			setState(34);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(31);
					declaration();
					}
					} 
				}
				setState(36);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			System.out.println("segment .text"); 
			                System.out.println("\tglobal asm_main"); 
			                System.out.println("asm_main:"); 
			                System.out.println("\tenter 0,0"); 
			                System.out.println("\tpusha"); 
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1049234L) != 0)) {
				{
				{
				setState(38);
				statement();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			System.out.println("\tpopa"); 
			                System.out.println("\tmov eax,0"); 
			                System.out.println("\tleave"); 
			                System.out.println("\tret"); 
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT) {
				{
				{
				setState(45);
				subprogram_dec();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Token a;
		public TerminalNode INT() { return getToken(MyLanguageV1CodeParser.INT, 0); }
		public TerminalNode SEMICOLON() { return getToken(MyLanguageV1CodeParser.SEMICOLON, 0); }
		public TerminalNode NAME() { return getToken(MyLanguageV1CodeParser.NAME, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			int a; 
			setState(54);
			match(INT);
			setState(55);
			((DeclarationContext)_localctx).a = match(NAME);
			setState(56);
			match(SEMICOLON);
			System.out.println("\t"+(((DeclarationContext)_localctx).a!=null?((DeclarationContext)_localctx).a.getText():null) + "  resd 1");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public PrintstmtContext printstmt() {
			return getRuleContext(PrintstmtContext.class,0);
		}
		public AssignstmtContext assignstmt() {
			return getRuleContext(AssignstmtContext.class,0);
		}
		public ShiftstmtContext shiftstmt() {
			return getRuleContext(ShiftstmtContext.class,0);
		}
		public DowhilestmtContext dowhilestmt() {
			return getRuleContext(DowhilestmtContext.class,0);
		}
		public Subprogram_invContext subprogram_inv() {
			return getRuleContext(Subprogram_invContext.class,0);
		}
		public ReturnstmtContext returnstmt() {
			return getRuleContext(ReturnstmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				ifstmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				printstmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				assignstmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				shiftstmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(63);
				dowhilestmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(64);
				subprogram_inv();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(65);
				returnstmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnstmtContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(MyLanguageV1CodeParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MyLanguageV1CodeParser.SEMICOLON, 0); }
		public ReturnstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterReturnstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitReturnstmt(this);
		}
	}

	public final ReturnstmtContext returnstmt() throws RecognitionException {
		ReturnstmtContext _localctx = new ReturnstmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(RETURN);
			setState(69);
			expression();
			setState(70);
			match(SEMICOLON);

			        System.out.println("\tleave");
			        System.out.println("\tret");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Subprogram_decContext extends ParserRuleContext {
		public Token a;
		public TerminalNode INT() { return getToken(MyLanguageV1CodeParser.INT, 0); }
		public TerminalNode LPAREN() { return getToken(MyLanguageV1CodeParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MyLanguageV1CodeParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(MyLanguageV1CodeParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(MyLanguageV1CodeParser.RBRACE, 0); }
		public TerminalNode NAME() { return getToken(MyLanguageV1CodeParser.NAME, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Subprogram_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subprogram_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterSubprogram_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitSubprogram_dec(this);
		}
	}

	public final Subprogram_decContext subprogram_dec() throws RecognitionException {
		Subprogram_decContext _localctx = new Subprogram_decContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subprogram_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			int a;
			setState(74);
			match(INT);
			setState(75);
			((Subprogram_decContext)_localctx).a = match(NAME);
			setState(76);
			match(LPAREN);
			setState(77);
			match(RPAREN);
			setState(78);
			match(LBRACE);

			        System.out.println("\t"+(((Subprogram_decContext)_localctx).a!=null?((Subprogram_decContext)_localctx).a.getText():null) + ":");
			        System.out.println("\tenter 0,0");
			        //System.out.println("\tpusha");
			    
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1049234L) != 0)) {
				{
				{
				setState(80);
				statement();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			       // System.out.println("\tpopa");
			        System.out.println("\tleave");
			        System.out.println("\tret");
			    
			setState(87);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Subprogram_invContext extends ParserRuleContext {
		public IdentifierContext a;
		public IdentifierContext identifier;
		public TerminalNode ASSIGN() { return getToken(MyLanguageV1CodeParser.ASSIGN, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(MyLanguageV1CodeParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MyLanguageV1CodeParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(MyLanguageV1CodeParser.SEMICOLON, 0); }
		public Subprogram_invContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subprogram_inv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterSubprogram_inv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitSubprogram_inv(this);
		}
	}

	public final Subprogram_invContext subprogram_inv() throws RecognitionException {
		Subprogram_invContext _localctx = new Subprogram_invContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subprogram_inv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			int a;
			setState(90);
			((Subprogram_invContext)_localctx).a = ((Subprogram_invContext)_localctx).identifier = identifier();
			setState(91);
			match(ASSIGN);
			setState(92);
			((Subprogram_invContext)_localctx).identifier = identifier();
			setState(93);
			match(LPAREN);
			setState(94);
			match(RPAREN);
			setState(95);
			match(SEMICOLON);

			        System.out.println("\tcall "+(((Subprogram_invContext)_localctx).identifier!=null?_input.getText(((Subprogram_invContext)_localctx).identifier.start,((Subprogram_invContext)_localctx).identifier.stop):null));
			        System.out.println("\tmov ["+(((Subprogram_invContext)_localctx).a!=null?_input.getText(((Subprogram_invContext)_localctx).a.start,((Subprogram_invContext)_localctx).a.stop):null)+"], eax");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DowhilestmtContext extends ParserRuleContext {
		public Token DO;
		public Token WHILE;
		public IdentifierContext a;
		public IntegerContext b;
		public TerminalNode DO() { return getToken(MyLanguageV1CodeParser.DO, 0); }
		public TerminalNode WHILE() { return getToken(MyLanguageV1CodeParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(MyLanguageV1CodeParser.LPAREN, 0); }
		public TerminalNode NOTEQUAL() { return getToken(MyLanguageV1CodeParser.NOTEQUAL, 0); }
		public TerminalNode RPAREN() { return getToken(MyLanguageV1CodeParser.RPAREN, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DowhilestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dowhilestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterDowhilestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitDowhilestmt(this);
		}
	}

	public final DowhilestmtContext dowhilestmt() throws RecognitionException {
		DowhilestmtContext _localctx = new DowhilestmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dowhilestmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			int a,b;
			String labelDo,labelWhile;
			setState(100);
			((DowhilestmtContext)_localctx).DO = match(DO);

			    labelDo = "label_do_"+Integer.toString((((DowhilestmtContext)_localctx).DO!=null?((DowhilestmtContext)_localctx).DO.getTokenIndex():0));
			    System.out.println(labelDo+":");

			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1049234L) != 0)) {
				{
				{
				setState(102);
				statement();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			((DowhilestmtContext)_localctx).WHILE = match(WHILE);
			setState(109);
			match(LPAREN);
			setState(110);
			((DowhilestmtContext)_localctx).a = identifier();
			setState(111);
			match(NOTEQUAL);
			setState(112);
			((DowhilestmtContext)_localctx).b = integer();
			setState(113);
			match(RPAREN);

			    System.out.println("\tcmp dword "+((DowhilestmtContext)_localctx).a.toString+","+((DowhilestmtContext)_localctx).b.toString);
			    labelWhile = "label_while_"+Integer.toString((((DowhilestmtContext)_localctx).WHILE!=null?((DowhilestmtContext)_localctx).WHILE.getTokenIndex():0));
			    System.out.println("\tjne "+labelDo);


			    System.out.println("\tjmp "+labelWhile);
			    System.out.println(labelWhile+":");

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShiftstmtContext extends ParserRuleContext {
		public IdentifierContext a;
		public IntegerContext b;
		public TerminalNode SHIFTLEFT() { return getToken(MyLanguageV1CodeParser.SHIFTLEFT, 0); }
		public TerminalNode SEMICOLON() { return getToken(MyLanguageV1CodeParser.SEMICOLON, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public ShiftstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shiftstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterShiftstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitShiftstmt(this);
		}
	}

	public final ShiftstmtContext shiftstmt() throws RecognitionException {
		ShiftstmtContext _localctx = new ShiftstmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_shiftstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 int a, b; 
			setState(118);
			((ShiftstmtContext)_localctx).a = identifier();
			setState(119);
			match(SHIFTLEFT);
			setState(120);
			((ShiftstmtContext)_localctx).b = integer();
			setState(121);
			match(SEMICOLON);

			        System.out.println("\tmov eax, [" + (((ShiftstmtContext)_localctx).a!=null?_input.getText(((ShiftstmtContext)_localctx).a.start,((ShiftstmtContext)_localctx).a.stop):null) + "]");
			        System.out.println("\tshl eax, " + (((ShiftstmtContext)_localctx).b!=null?_input.getText(((ShiftstmtContext)_localctx).b.start,((ShiftstmtContext)_localctx).b.stop):null));
			        System.out.println("\tmov [" + (((ShiftstmtContext)_localctx).a!=null?_input.getText(((ShiftstmtContext)_localctx).a.start,((ShiftstmtContext)_localctx).a.stop):null) + "], eax");
			        System.out.println("\tmov eax, [" + (((ShiftstmtContext)_localctx).a!=null?_input.getText(((ShiftstmtContext)_localctx).a.start,((ShiftstmtContext)_localctx).a.stop):null) + "]");

			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfstmtContext extends ParserRuleContext {
		public Token IF;
		public IdentifierContext a;
		public IntegerContext b;
		public TerminalNode IF() { return getToken(MyLanguageV1CodeParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(MyLanguageV1CodeParser.LPAREN, 0); }
		public TerminalNode EQUAL() { return getToken(MyLanguageV1CodeParser.EQUAL, 0); }
		public TerminalNode RPAREN() { return getToken(MyLanguageV1CodeParser.RPAREN, 0); }
		public TerminalNode ENDIF() { return getToken(MyLanguageV1CodeParser.ENDIF, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MyLanguageV1CodeParser.ELSE, 0); }
		public IfstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).enterIfstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyLanguageV1CodeListener ) ((MyLanguageV1CodeListener)listener).exitIfstmt(this);
		}
	}

	public final IfstmtContext ifstmt() throws RecognitionException {
		IfstmtContext _localctx = new IfstmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			int a,b;
			String labelElse, labelEndIf;
			setState(126);
			((IfstmtContext)_localctx).IF = match(IF);
			setState(127);
			match(LPAREN);
			setState(128);
			((IfstmtContext)_localctx).a = identifier();
			setState(129);
			match(EQUAL);
			setState(130);
			((IfstmtContext)_localctx).b = integer();
			setState(131);
			match(RPAREN);
			System.out.println("\tcmp dword "+((IfstmtContext)_localctx).a.toString+","+((IfstmtContext)_localctx).b.toString);
			             labelElse = "label_else_"+Integer.toString((((IfstmtContext)_localctx).IF!=null?((IfstmtContext)_localctx).IF.getTokenIndex():0));
			             System.out.println("\tjnz "+labelElse); 
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1049234L) != 0)) {
				{
				{
				setState(133);
				statement();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 labelEndIf = "label_endif_"+Integer.toString((((IfstmtContext)_localctx).IF!=null?((IfstmtContext)_localctx).IF.getTokenIndex():0));
			              System.out.println("\tjmp "+labelEndIf);
			              System.out.println(labelElse+":"); 
			setState(148);
			_errHandler.sync(this);
